--- a/3_3_classification.qmd
+++ b/3_3_classification.qmd
@@ -24,11 +24,11 @@ jupyter: python3
 + 분류모델 평가지표
 
 |지표|설명|
-|:------:|:------------------------------|
-|정확도(accuracy)|전체 중에서 실제와 동일하게 예측한 비율, $\frac{TP + TN}{TP + TN + FP + FN}$|
-|정밀도(precision)|모델이 양성이라고 예측한 것 중에서 실제로 양성인 비율, $\frac{TP}{TP + FP}$|
-|재현율(recall, sensitivity)|실제 양성 중에서 모델이 양성이라고 예측한 비율, $\frac{TP}{TP + FN}$|
-|특이도(specificity)|실제 음성 중에서 모델이 음성이라고 예측한 비율, $\frac{TN}{TN + FP}$|
+|:---------------:|:------------------------------|
+|정확도 <br>(accuracy)|전체 중에서 실제와 동일하게 예측한 비율, $\frac{TP + TN}{TP + TN + FP + FN}$|
+|정밀도 <br>(precision)|모델이 양성이라고 예측한 것 중에서 실제로 양성인 비율, $\frac{TP}{TP + FP}$|
+|재현율 <br>(recall, sensitivity)|실제 양성 중에서 모델이 양성이라고 예측한 비율, $\frac{TP}{TP + FN}$|
+|특이도 <br>(specificity)|실제 음성 중에서 모델이 음성이라고 예측한 비율, $\frac{TN}{TN + FP}$|
 |F1-score|정밀도와 재현율의 조화 평균|
 
 <br>
@@ -60,13 +60,10 @@ jupyter: python3
 
 <br>
 
-+ 최적의 k 값 선택(하이퍼파라미터 튜닝; hyperparameter tunning)
-  1. 교차검증(cross-validation) 수행
-     + 데이터를 여러 조각(fold)으로 나누고, 각 조각을 번갈아가며 검증 데이터(test data)로 사용
-     + 각 반복에서 모델 평가지표(정확도, F1-score, 정밀도, 재현도 등)를 계산
-     + 보통 각 반복에서 산출한 모델 평가지표의 평균 값을 모델 성능의 추정값으로 사용
-  3. 여러 이웃 수 k 값에 대해 교차검증을 반복 수행하여 각 k 값별로 모델 성능의 추정값을 계산
-  4. 모델 성능이 가장 좋은 k 값을 최적의 값으로 선택
++ 교차검증(k-fold cross-validation)
+  + 데이터를 여러 조각(fold)으로 나누고, 각 조각을 번갈아가며 검증 데이터(test data)로 사용
+  + 각 반복에서 모델 평가지표(정확도, F1-score, 정밀도, 재현도 등)를 계산
+  + 보통 각 반복에서 산출한 모델 평가지표의 평균 값을 모델 성능의 추정값으로 사용
 
 <br>
 
@@ -74,12 +71,19 @@ jupyter: python3
 
 <br>
 
++ 최적의 k 값 선택(하이퍼파라미터 튜닝; hyperparameter tunning)
+  1. 여러 이웃 수 k 값에 대해 교차검증을 반복 수행하여 각 k 값별로 모델 성능의 추정값을 계산
+  2. 모델 성능이 가장 좋은 k 값을 최적의 값으로 선택
+
+<br>
+
 + 표준화 작업
   + K-NN 알고리즘은 거리를 기반으로 하기 때문에, 데이터의 단위나 크기 차이가 크면 특정 특성(feature)이 크게 영향을 미쳐 엉뚱한 결과가 나올 수 있음
   + 따라서 모든 특성이 비슷한 스케일(scale)로 반영되도록 표준화 작업이 필수적임
-  + 대표적인 표준화 방법은 다음과 같음
-    + z-점수 표준화 : 평균이 0, 표준편차가 1이 되도록 변환하는 방법, $x' = \frac{x-\mu}{\sigma}$
-    + 최대-최소 표준화 : 데이터의 0~1 범위로 변환하는 방법, $x' = \frac{x-min(x)}{max(x)-min(x)}$
+  + z-점수 표준화
+    + 평균이 0, 표준편차가 1이 되도록 변환하는 방법, $x' = \frac{x-\mu}{\sigma}$
+  + 최대-최소 표준화
+    + 데이터의 0~1 범위로 변환하는 방법, $x' = \frac{x-min(x)}{max(x)-min(x)}$
 
 <br>
 
@@ -143,7 +147,7 @@ plt.show()
 #| colab: {base_uri: https://localhost:8080/, height: 639}
 # 영화 평균 평점 분포
 plt.figure(figsize=(5, 3))
-plt.title("Distribution of Average Movie Rating")
+plt.title('Distribution of Average Movie Rating')
 sns.histplot(df['vote_average'], bins=20, kde=True)
 plt.show()
 ```
@@ -186,9 +190,9 @@ for genre in top_genres:
 ```
 
 ```{python}
-# 훈련 데이터와 평가 데이터로 분할 (8:2 비율)
+# 학습 데이터와 평가 데이터로 분할 (8:2 비율)
 # stratify=y 옵션 설정
-# → 분류 문제에서 각 클래스(calss)가 훈련 데이터와 평가 데이터에 비슷한 비율로 포함되도록 함
+# → 분류 문제에서 각 클래스(calss)가 학습 데이터와 평가 데이터에 비슷한 비율로 포함되도록 함
 #   클래스 불균형 문제를 완화하고 모델 성능을 안정적으로 평가하기 위함
 X = df[['Action', 'Adventure', 'Fantasy', 'ScienceFiction', 'Crime', 'Drama', 'Thriller',
         'Animation', 'Family', 'Western', 'Comedy', 'Romance', 'Horror', 'Mystery',
@@ -220,7 +224,7 @@ for k in k_range:
 ```{python}
 # 모델 성능이 가장 좋은 k 값 선택
 best_k = k_range[k_scores.index(max(k_scores))]
-print(f"최적의 k 값은 {best_k}이며, 평균 정확도는 {max(k_scores):.3f}")
+print(f'최적의 k 값은 {best_k}이며, 평균 정확도는 {max(k_scores):.3f}')
 ```
 
 ```{python}
@@ -236,9 +240,9 @@ accuracy = accuracy_score(y_test, y_pred)
 precision = precision_score(y_test, y_pred, average='weighted', zero_division=0)
 recall = recall_score(y_test, y_pred, average='weighted', zero_division=0)
 
-print(f"정확도 : {accuracy:.3f}")
-print(f"정밀도 : {precision:.3f}")
-print(f"재현율 : {recall:.3f}")
+print(f'정확도 : {accuracy:.3f}')
+print(f'정밀도 : {precision:.3f}')
+print(f'재현율 : {recall:.3f}')
 ```
 
 ```{python}
@@ -252,8 +256,8 @@ print(f'Action, Thriller 장르일 때, target 예측값 : {y_pred[0]:.0f}')
 <br>
 
 ##### **결과 및 시사점**
-+ 정확도는 44.3%로, 전체 영화 중 약 절반 이하만 정답 클래스를 올바르게 분류함
-+ 정밀도는 38.5%로, 재현율은 44.3%로, 전체 클래스에 대한 평균적인 분류 성능이 낮은 편임
++ 정확도는 43.8%로, 전체 영화 중 약 절반 이하만 정답 클래스를 올바르게 분류함
++ 정밀도는 37.8%로, 재현율은 43.8%로, 전체 클래스에 대한 평균적인 분류 성능이 낮은 편임
 + 세 지표가 모두 낮게 나타났으며, 이는 입력 데이터로 사용한 장르 정보만으로는 target을 효과적으로 구분하기 어려운 것으로 판단됨
 + 또한 클래스 불균형이 존재하여, 일부 클래스는 모델이 거의 예측하지 못했을 가능성도 있음
 + 따라서 모델 성능 개선을 위해 감독, 배우, 개봉 연도 등의 추가적인 특성을 포함할 필요가 있음
@@ -320,7 +324,7 @@ df_mean = df.groupby('Target').mean()
 ```{python}
 #| scrolled: true
 # 5년 이상 경력 여부에 따른 평균 농구 기술 비교
-# 경기 기여도가 높은 기술(리바운드, 어시스트, 스틸, 블록)은 경력이 5년 이상인 선수가 더 뛰었났음
+# 경기 기여도가 높은 기술(리바운드, 어시스트, 스틸, 블록)은 경력이 5년 이상인 선수가 더 뛰어남
 # 하지만 턴오버 횟수도 경력이 5년 이상인 선수가 더 많은 것으로 나타남
 plt.figure(figsize=(8, 3))
 sns.heatmap(df_mean, annot=True, cmap='Oranges', square=True)
@@ -336,7 +340,7 @@ plt.show()
 ```
 
 ```{python}
-# 훈련 데이터와 평가 데이터로 분할 (8:2 비율)
+# 학습 데이터와 평가 데이터로 분할 (8:2 비율)
 X = df[['Rebounds','Assists','Steals','Blocks','Turnovers']]
 y = df['Target']
 
@@ -364,7 +368,7 @@ for k in k_range:
 #| colab: {base_uri: https://localhost:8080/}
 # 모델 성능이 가장 좋은 k 값 선택
 best_k = k_range[k_scores.index(max(k_scores))]
-print(f"최적의 k 값은 {best_k}이며, 평균 정확도는 {max(k_scores):.3f}")
+print(f'최적의 k 값은 {best_k}이며, 평균 정확도는 {max(k_scores):.3f}')
 ```
 
 ```{python}
@@ -379,9 +383,9 @@ accuracy = accuracy_score(y_test, y_pred)
 precision = precision_score(y_test, y_pred)
 recall = recall_score(y_test, y_pred)
 
-print(f"정확도 : {accuracy:.3f}")
-print(f"정밀도 : {precision:.3f}")
-print(f"재현율 : {recall:.3f}")
+print(f'정확도 : {accuracy:.3f}')
+print(f'정밀도 : {precision:.3f}')
+print(f'재현율 : {recall:.3f}')
 ```
 
 ```{python}
