--- a/notice.qmd
+++ b/notice.qmd
@@ -10,7 +10,7 @@ jupyter: python3
 <br>
 
 
-## 연구문제 : 타이타닉 생존자 분석
+## 타이타닉 생존자 분석
 + RMS 타이타닉은 영국의 화이트 스타 라인이 운영한 북대서양 횡단 여객선으로, 1912년 4월 10일 첫 출항하였다. 영국의 사우샘프턴을 떠나 미국의 뉴욕으로 향하던 중에 4월 15일 빙산과 충돌하여 침몰하였으며, 이로 인해 1,514명이 사망한 것으로 알려져 있다.
 + 타이타닉 데이터를 분석하여 **생존에 영향을 준 요인을 파악**하고, 이를 바탕으로 **생존 여부를 예측**하는 모델을 학습해보자.
 
@@ -47,7 +47,7 @@ df = sns.load_dataset('titanic')
 
 <br>
 
-## 분석 가이드라인
+## 가이드라인
 + 의미가 중복되는 변수는 하나만 선택하여 사용할 것
 + 결측값은 반드시 처리할 것
 + 데이터 탐색을 포함할 것
