--- a/2_2_pandas.ipynb
+++ b/2_2_pandas.ipynb
@@ -3314,7 +3314,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "<br>\n",
     "\n",
